Done the quality control settings file for MOD09A1 and MYD09A1

--- a/quality_control/qc_default_settings.ini
+++ b/quality_control/qc_default_settings.ini
@@ -1,12 +1,183 @@
 ##################################################################
+#  VALUES DESCRIPTIONS
+##################################################################
+# true -> accept/pass this quality item
+# false -> not accept/pass this quality item [1]
+# XX_min = value -> accept/pass only if XX >= value
+# XX_max = value -> accept/pass only if XX <= value
+#
+# [1] if a quality control item is false, this mean that if the
+#     pixel has this quality value, the pixel not pass the
+#     quality control and marked as invalid.
+#
+
+##################################################################
 #  MODIS
 ##################################################################
 
-[MOD09A1]
-a = 2
-b = 3
+[MXD09A1] ########################################################
+# for MOD09A1 and MYD09A1
 
-[MOD09Q1]
+#### Reflectance Band Quality (rbq) ####
+
+### Modland QA
+# 00 -> Corrected product produced at ideal quality -- all bands
+# 01 -> Corrected product produced at less than idel quality -- some or all bands
+# 10 -> Corrected product NOT produced due to cloud effect -- all bands
+# 11 -> Corrected product NOT produced due to other reasons -- some or all bands mayb be fill value (Note that a value of [11] overrides a value of [01])
+rbq_modland_qa_00 = true
+rbq_modland_qa_01 = true
+rbq_modland_qa_10 = false
+rbq_modland_qa_11 = false
+
+### Data Quality
+# 0000 -> highest quality
+# 0111 -> noisy detector
+# 1000 -> dead detector; data interpolated in L1B
+# 1001 -> solar zenith >= 86 degrees
+# 1010 -> solar zenith >= 85 and < 86 degrees
+# 1011 -> missing input
+# 1100 -> internal constant used in place of climatological data for at least one atmospheric constant
+# 1101 -> correction out of bounds, pixel constrained to extreme allowable value
+# 1110 -> L1B data faulty
+# 1111 -> not processed due to deep ocean or cloud
+rbq_data_quality_0000 = true
+rbq_data_quality_0111 = true
+rbq_data_quality_1000 = true
+rbq_data_quality_1001 = true
+rbq_data_quality_1010 = true
+rbq_data_quality_1011 = true
+rbq_data_quality_1100 = true
+rbq_data_quality_1101 = true
+rbq_data_quality_1110 = true
+rbq_data_quality_1111 = false
+
+### Atmospheric correction
+# 0 -> Not Corrected product
+# 1 -> Corrected product
+rbq_atcorr_0 = true
+rbq_atcorr_1 = true
+
+### Adjacency correction
+# 0 -> Not Corrected product
+# 1 -> Corrected product
+rbq_adjcorr_0 = true
+rbq_adjcorr_1 = true
+
+#### Solar Zenith Angle Band ####
+
+# Angle between 0-180
+szangle_min = 30
+szangle_max = 180
+
+#### View Zenith Angle Band ####
+
+# Angle between 0-180
+vzangle_min = 30
+vzangle_max = 180
+
+#### Relative Zenith Angle Band ####
+
+# Angle between 0-180
+rzangle_min = 30
+rzangle_max = 180
+
+#### State flags Band (sf) ####
+
+### Cloud State
+# 00 -> clear
+# 01 -> cloudy
+# 10 -> mixed
+# 11 -> not set, assumed clear
+sf_cloud_state_00 = true
+sf_cloud_state_01 = true
+sf_cloud_state_10 = true
+sf_cloud_state_11 = true
+
+### Cloud shadow
+# 0 -> No
+# 1 -> Yes
+sf_cloud_shadow_0 = true
+sf_cloud_shadow_1 = true
+
+### Land/Water flag
+# 000 -> Shallow ocean
+# 001 -> Land
+# 010 -> Ocean coastlines and lake shorelines
+# 011 -> Shallow inland water
+# 100 -> Ephemeral water
+# 101 -> Deep inland water
+# 110 -> Continental/moderate ocean
+# 111 -> Deep ocean
+sf_land_water_000 = true
+sf_land_water_001 = true
+sf_land_water_010 = true
+sf_land_water_011 = true
+sf_land_water_100 = true
+sf_land_water_101 = true
+sf_land_water_110 = true
+sf_land_water_111 = true
+
+### Aerosol Quantity
+# 00 -> Climatology
+# 01 -> Low
+# 10 -> Average
+# 11 -> High
+sf_aerosol_quantity_00 = true
+sf_aerosol_quantity_01 = true
+sf_aerosol_quantity_10 = true
+sf_aerosol_quantity_11 = true
+
+### cirrus_detected
+# 00 -> None
+# 01 -> Small
+# 10 -> Average
+# 11 -> High
+sf_cirrus_detected_00 = true
+sf_cirrus_detected_01 = true
+sf_cirrus_detected_10 = true
+sf_cirrus_detected_11 = true
+
+### Internal Cloud Algorithm Flag
+# 0 -> No cloud
+# 1 -> Cloud
+sf_internal_cloud_algorithm_0 = true
+sf_internal_cloud_algorithm_1 = true
+
+### Internal Fire Algorithm Flag
+# 0 -> No fire
+# 1 -> Fire
+sf_internal_fire_algorithm_0 = true
+sf_internal_fire_algorithm_1 = true
+
+### MOD35 snow/ice flag
+# 0 -> No
+# 1 -> Yes
+sf_mod35_snow_ice_0 = true
+sf_mod35_snow_ice_1 = true
+
+### Pixel adjacent to cloud
+# 0 -> No
+# 1 -> Yes
+sf_pixel_adjacent_to_cloud_0 = true
+sf_pixel_adjacent_to_cloud_1 = true
+
+### BRDF correction performed
+# 0 -> No
+# 1 -> Yes
+sf_brdf_correction_performed_0 = true
+sf_brdf_correction_performed_1 = true
+
+### Internal Snow Mask
+# 0 -> No snow
+# 1 -> Snow
+sf_internal_snow_mask_0 = true
+sf_internal_snow_mask_1 = true
+
+
+[MXD09Q1] ########################################################
+# for MOD09Q1 and MYD09Q1
+
 a = 2
 b = 3
 
