Update the quality control file with the current rules using in the actual ATD process

--- a/quality_control/qc_default_settings.ini
+++ b/quality_control/qc_default_settings.ini
@@ -26,7 +26,7 @@
 # 10 -> Corrected product NOT produced due to cloud effect -- all bands
 # 11 -> Corrected product NOT produced due to other reasons -- some or all bands mayb be fill value (Note that a value of [11] overrides a value of [01])
 rbq_modland_qa_00 = true
-rbq_modland_qa_01 = true
+rbq_modland_qa_01 = false
 rbq_modland_qa_10 = false
 rbq_modland_qa_11 = false
 
@@ -42,21 +42,21 @@ rbq_modland_qa_11 = false
 # 1110 -> L1B data faulty
 # 1111 -> not processed due to deep ocean or cloud
 rbq_data_quality_0000 = true
-rbq_data_quality_0111 = true
-rbq_data_quality_1000 = true
+rbq_data_quality_0111 = false
+rbq_data_quality_1000 = false
 rbq_data_quality_1001 = true
 rbq_data_quality_1010 = true
-rbq_data_quality_1011 = true
-rbq_data_quality_1100 = true
-rbq_data_quality_1101 = true
-rbq_data_quality_1110 = true
+rbq_data_quality_1011 = false
+rbq_data_quality_1100 = false
+rbq_data_quality_1101 = false
+rbq_data_quality_1110 = false
 rbq_data_quality_1111 = false
 
 ### Atmospheric correction
 # 0 -> Not Corrected product
 # 1 -> Corrected product
 rbq_atcorr_0 = true
-rbq_atcorr_1 = true
+rbq_atcorr_1 = false
 
 ### Adjacency correction
 # 0 -> Not Corrected product
@@ -67,19 +67,19 @@ rbq_adjcorr_1 = true
 #### Solar Zenith Angle Band ####
 
 # Angle between 0-180
-szangle_min = 30
+szangle_min = 85
 szangle_max = 180
 
 #### View Zenith Angle Band ####
 
 # Angle between 0-180
-vzangle_min = 30
+vzangle_min = 0
 vzangle_max = 180
 
 #### Relative Zenith Angle Band ####
 
 # Angle between 0-180
-rzangle_min = 30
+rzangle_min = 0
 rzangle_max = 180
 
 #### State flags Band (sf) ####
@@ -90,9 +90,9 @@ rzangle_max = 180
 # 10 -> mixed
 # 11 -> not set, assumed clear
 sf_cloud_state_00 = true
-sf_cloud_state_01 = true
-sf_cloud_state_10 = true
-sf_cloud_state_11 = true
+sf_cloud_state_01 = false
+sf_cloud_state_10 = false
+sf_cloud_state_11 = false
 
 ### Cloud shadow
 # 0 -> No
@@ -142,7 +142,7 @@ sf_cirrus_detected_11 = true
 # 0 -> No cloud
 # 1 -> Cloud
 sf_internal_cloud_algorithm_0 = true
-sf_internal_cloud_algorithm_1 = true
+sf_internal_cloud_algorithm_1 = false
 
 ### Internal Fire Algorithm Flag
 # 0 -> No fire
