--- a/quality_control/qc_default_settings.ini
+++ b/quality_control/qc_default_settings.ini
@@ -20,11 +20,11 @@
 
 #### Reflectance Band Quality (rbq) ####
 
-### Modland QA
-# 00 -> Corrected product produced at ideal quality -- all bands
+### Modland QA (all bands)
+# 00 -> Corrected product produced at ideal quality -- all bands (WARNING: This field is very exacting)
 # 01 -> Corrected product produced at less than idel quality -- some or all bands
 # 10 -> Corrected product NOT produced due to cloud effect -- all bands
-# 11 -> Corrected product NOT produced due to other reasons -- some or all bands mayb be fill value (Note that a value of [11] overrides a value of [01])
+# 11 -> Corrected product NOT produced due to other reasons -- some or all bands maybe be fill value (Note that a value of [11] overrides a value of [01])
 rbq_modland_qa_00 = true
 rbq_modland_qa_01 = false
 rbq_modland_qa_10 = false
@@ -44,7 +44,7 @@ rbq_modland_qa_11 = false
 rbq_data_quality_0000 = true
 rbq_data_quality_0111 = false
 rbq_data_quality_1000 = false
-rbq_data_quality_1001 = true
+rbq_data_quality_1001 = false
 rbq_data_quality_1010 = true
 rbq_data_quality_1011 = false
 rbq_data_quality_1100 = false
@@ -60,27 +60,27 @@ rbq_atcorr_1 = false
 
 ### Adjacency correction
 # 0 -> Not Corrected product
-# 1 -> Corrected product
+# 1 ->   Corrected product
 rbq_adjcorr_0 = true
 rbq_adjcorr_1 = true
 
 #### Solar Zenith Angle Band ####
 
 # Angle between 0-180
-szangle_min = 85
-szangle_max = 180
+sza_min = 0
+sza_max = 180
 
 #### View Zenith Angle Band ####
 
 # Angle between 0-180
-vzangle_min = 0
-vzangle_max = 180
+vza_min = 0
+vza_max = 180
 
 #### Relative Zenith Angle Band ####
 
 # Angle between -180-180
-rzangle_min = -180
-rzangle_max = 180
+rza_min = -180
+rza_max = 180
 
 #### State flags Band (sf) ####
 
