After several test the quality control field inside the quality control file, I found the best approximation to current settings used by Tiseg software in the "alertas tempranas" project. This need more investigate, because the Tiseg software seems to behave strange with filters selected.

--- a/quality_control/qc_default_modis_settings.ini
+++ b/quality_control/qc_default_modis_settings.ini
@@ -26,7 +26,7 @@
 # 10 -> Corrected product NOT produced due to cloud effect -- all bands
 # 11 -> Corrected product NOT produced due to other reasons -- some or all bands maybe be fill value (Note that a value of [11] overrides a value of [01])
 rbq_modland_qa_00 = true
-rbq_modland_qa_01 = false
+rbq_modland_qa_01 = true
 rbq_modland_qa_10 = false
 rbq_modland_qa_11 = false
 
@@ -62,7 +62,7 @@ rbq_atcorr_1 = false
 # 0 -> Not Corrected product
 # 1 ->   Corrected product
 rbq_adjcorr_0 = true
-rbq_adjcorr_1 = true
+rbq_adjcorr_1 = false
 
 #### Solar Zenith Angle Band ####
 
@@ -111,12 +111,12 @@ sf_cloud_shadow_1 = true
 # 111 -> Deep ocean
 sf_land_water_000 = true
 sf_land_water_001 = true
-sf_land_water_010 = true
-sf_land_water_011 = true
-sf_land_water_100 = true
-sf_land_water_101 = true
-sf_land_water_110 = true
-sf_land_water_111 = true
+sf_land_water_010 = false
+sf_land_water_011 = false
+sf_land_water_100 = false
+sf_land_water_101 = false
+sf_land_water_110 = false
+sf_land_water_111 = false
 
 ### Aerosol Quantity
 # 00 -> Climatology
@@ -124,9 +124,9 @@ sf_land_water_111 = true
 # 10 -> Average
 # 11 -> High
 sf_aerosol_quantity_00 = true
-sf_aerosol_quantity_01 = true
-sf_aerosol_quantity_10 = true
-sf_aerosol_quantity_11 = true
+sf_aerosol_quantity_01 = false
+sf_aerosol_quantity_10 = false
+sf_aerosol_quantity_11 = false
 
 ### cirrus_detected
 # 00 -> None
@@ -142,7 +142,7 @@ sf_cirrus_detected_11 = true
 # 0 -> No cloud
 # 1 -> Cloud
 sf_internal_cloud_algorithm_0 = true
-sf_internal_cloud_algorithm_1 = false
+sf_internal_cloud_algorithm_1 = true
 
 ### Internal Fire Algorithm Flag
 # 0 -> No fire
@@ -166,13 +166,13 @@ sf_pixel_adjacent_to_cloud_1 = true
 # 0 -> No
 # 1 -> Yes
 sf_brdf_correction_performed_0 = true
-sf_brdf_correction_performed_1 = true
+sf_brdf_correction_performed_1 = false
 
 ### Internal Snow Mask
 # 0 -> No snow
 # 1 -> Snow
 sf_internal_snow_mask_0 = true
-sf_internal_snow_mask_1 = true
+sf_internal_snow_mask_1 = false
 
 
 [MXD09Q1] ########################################################
