Added rules for default quality control file for MOD09Q1 and MYD09Q1

--- a/quality_control/qc_default_modis_settings.ini
+++ b/quality_control/qc_default_modis_settings.ini
@@ -22,7 +22,7 @@
 
 ### Modland QA (all bands)
 # 00 -> Corrected product produced at ideal quality -- all bands (WARNING: This field is very exacting)
-# 01 -> Corrected product produced at less than idel quality -- some or all bands
+# 01 -> Corrected product produced at less than ideal quality -- some or all bands
 # 10 -> Corrected product NOT produced due to cloud effect -- all bands
 # 11 -> Corrected product NOT produced due to other reasons -- some or all bands maybe be fill value (Note that a value of [11] overrides a value of [01])
 rbq_modland_qa_00 = true
@@ -178,6 +178,64 @@ sf_internal_snow_mask_1 = false
 [MXD09Q1] ########################################################
 # for MOD09Q1 and MYD09Q1
 
-a = 2
-b = 3
+#### Reflectance Band Quality (rbq) ####
 
+### Modland QA (all bands)
+# 00 -> Corrected product produced at ideal quality -- all bands (WARNING: This field is very exacting)
+# 01 -> Corrected product produced at less than ideal quality -- some or all bands
+# 10 -> Corrected product NOT produced due to cloud effect -- all bands
+# 11 -> Corrected product NOT produced due to other reasons -- some or all bands maybe be fill value (Note that a value of [11] overrides a value of [01])
+rbq_modland_qa_00 = true
+rbq_modland_qa_01 = true
+rbq_modland_qa_10 = false
+rbq_modland_qa_11 = false
+
+### Cloud State
+# 00 -> clear
+# 01 -> cloudy
+# 10 -> mixed
+# 11 -> not set, assumed clear
+sf_cloud_state_00 = true
+sf_cloud_state_01 = false
+sf_cloud_state_10 = false
+sf_cloud_state_11 = false
+
+### Data Quality
+# 0000 -> highest quality
+# 0111 -> noisy detector
+# 1000 -> dead detector; data interpolated in L1B
+# 1001 -> solar zenith >= 86 degrees
+# 1010 -> solar zenith >= 85 and < 86 degrees
+# 1011 -> missing input
+# 1100 -> internal constant used in place of climatological data for at least one atmospheric constant
+# 1101 -> correction out of bounds, pixel constrained to extreme allowable value
+# 1110 -> L1B data faulty
+# 1111 -> not processed due to deep ocean or cloud
+rbq_data_quality_0000 = true
+rbq_data_quality_0111 = false
+rbq_data_quality_1000 = false
+rbq_data_quality_1001 = false
+rbq_data_quality_1010 = true
+rbq_data_quality_1011 = false
+rbq_data_quality_1100 = false
+rbq_data_quality_1101 = false
+rbq_data_quality_1110 = false
+rbq_data_quality_1111 = false
+
+### Atmospheric correction
+# 0 -> Not Corrected product
+# 1 -> Corrected product
+rbq_atcorr_0 = true
+rbq_atcorr_1 = false
+
+### Adjacency correction
+# 0 -> Not Corrected product
+# 1 -> Corrected product
+rbq_adjcorr_0 = true
+rbq_adjcorr_1 = false
+
+### Different orbit from 500m product
+# 0 -> same orbit as 500m
+# 1 -> different orbit from 500m
+rbq_difforbit_0 = true
+rbq_difforbit_1 = true
