After several test the ATD team adjust some quality items for MOD09

--- a/quality_control/qc_default_modis_settings.ini
+++ b/quality_control/qc_default_modis_settings.ini
@@ -44,7 +44,7 @@ rbq_modland_qa_11 = false
 rbq_data_quality_0000 = true
 rbq_data_quality_0111 = false
 rbq_data_quality_1000 = false
-rbq_data_quality_1001 = false
+rbq_data_quality_1001 = true
 rbq_data_quality_1010 = true
 rbq_data_quality_1011 = false
 rbq_data_quality_1100 = false
@@ -56,13 +56,13 @@ rbq_data_quality_1111 = false
 # 0 -> Not Corrected product
 # 1 -> Corrected product
 rbq_atcorr_0 = true
-rbq_atcorr_1 = false
+rbq_atcorr_1 = true
 
 ### Adjacency correction
 # 0 -> Not Corrected product
 # 1 ->   Corrected product
 rbq_adjcorr_0 = true
-rbq_adjcorr_1 = false
+rbq_adjcorr_1 = true
 
 #### Solar Zenith Angle Band ####
 
@@ -89,6 +89,7 @@ rza_max = 180
 # 01 -> cloudy
 # 10 -> mixed
 # 11 -> not set, assumed clear
+# WARNING: Cloud State not  populated  since  V3  collection
 sf_cloud_state_00 = true
 sf_cloud_state_01 = false
 sf_cloud_state_10 = false
@@ -98,7 +99,7 @@ sf_cloud_state_11 = false
 # 0 -> No
 # 1 -> Yes
 sf_cloud_shadow_0 = true
-sf_cloud_shadow_1 = true
+sf_cloud_shadow_1 = false
 
 ### Land/Water flag
 # 000 -> Shallow ocean
@@ -111,9 +112,9 @@ sf_cloud_shadow_1 = true
 # 111 -> Deep ocean
 sf_land_water_000 = true
 sf_land_water_001 = true
-sf_land_water_010 = false
-sf_land_water_011 = false
-sf_land_water_100 = false
+sf_land_water_010 = true
+sf_land_water_011 = true
+sf_land_water_100 = true
 sf_land_water_101 = false
 sf_land_water_110 = false
 sf_land_water_111 = false
@@ -124,7 +125,7 @@ sf_land_water_111 = false
 # 10 -> Average
 # 11 -> High
 sf_aerosol_quantity_00 = true
-sf_aerosol_quantity_01 = false
+sf_aerosol_quantity_01 = true
 sf_aerosol_quantity_10 = false
 sf_aerosol_quantity_11 = false
 
@@ -136,7 +137,7 @@ sf_aerosol_quantity_11 = false
 sf_cirrus_detected_00 = true
 sf_cirrus_detected_01 = true
 sf_cirrus_detected_10 = true
-sf_cirrus_detected_11 = true
+sf_cirrus_detected_11 = false
 
 ### Internal Cloud Algorithm Flag
 # 0 -> No cloud
@@ -214,7 +215,7 @@ sf_cloud_state_11 = false
 rbq_data_quality_0000 = true
 rbq_data_quality_0111 = false
 rbq_data_quality_1000 = false
-rbq_data_quality_1001 = false
+rbq_data_quality_1001 = true
 rbq_data_quality_1010 = true
 rbq_data_quality_1011 = false
 rbq_data_quality_1100 = false
@@ -226,13 +227,13 @@ rbq_data_quality_1111 = false
 # 0 -> Not Corrected product
 # 1 -> Corrected product
 rbq_atcorr_0 = true
-rbq_atcorr_1 = false
+rbq_atcorr_1 = true
 
 ### Adjacency correction
 # 0 -> Not Corrected product
 # 1 -> Corrected product
 rbq_adjcorr_0 = true
-rbq_adjcorr_1 = false
+rbq_adjcorr_1 = true
 
 ### Different orbit from 500m product
 # 0 -> same orbit as 500m
