Add some comments in some quality items for MOD09, related with commit #e5ca226

--- a/quality_control/qc_default_modis_settings.ini
+++ b/quality_control/qc_default_modis_settings.ini
@@ -55,6 +55,8 @@ rbq_data_quality_1111 = false
 ### Atmospheric correction
 # 0 -> Not Corrected product
 # 1 -> Corrected product
+# WARNING: This field is very exacting
+#          ~98% of pixels marked with flag 0
 rbq_atcorr_0 = true
 rbq_atcorr_1 = true
 
@@ -89,7 +91,7 @@ rza_max = 180
 # 01 -> cloudy
 # 10 -> mixed
 # 11 -> not set, assumed clear
-# WARNING: Cloud State not  populated  since  V3  collection
+# WARNING: Cloud State not populated since V3 collection
 sf_cloud_state_00 = true
 sf_cloud_state_01 = false
 sf_cloud_state_10 = false
@@ -142,6 +144,7 @@ sf_cirrus_detected_11 = false
 ### Internal Cloud Algorithm Flag
 # 0 -> No cloud
 # 1 -> Cloud
+# NOTE: Maybe this is a water/ocean mask or related with that
 sf_internal_cloud_algorithm_0 = true
 sf_internal_cloud_algorithm_1 = true
 
@@ -154,6 +157,8 @@ sf_internal_fire_algorithm_1 = true
 ### MOD35 snow/ice flag
 # 0 -> No
 # 1 -> Yes
+# WARNING: This field is very exacting
+#          ~90% of pixels marked with flag yes
 sf_mod35_snow_ice_0 = true
 sf_mod35_snow_ice_1 = true
 
@@ -172,6 +177,8 @@ sf_brdf_correction_performed_1 = false
 ### Internal Snow Mask
 # 0 -> No snow
 # 1 -> Snow
+# NOTE: Maybe this is a cloud mask or related with that
+#       see more: http://modis-snow-ice.gsfc.nasa.gov/uploads/pap_cloud_obs02.pdf
 sf_internal_snow_mask_0 = true
 sf_internal_snow_mask_1 = false
 
