Fixed the name of cloud_state in the correct quality band in Q1

--- a/quality_control/qc_default_modis_settings.ini
+++ b/quality_control/qc_default_modis_settings.ini
@@ -203,10 +203,10 @@ rbq_modland_qa_11 = false
 # 01 -> cloudy
 # 10 -> mixed
 # 11 -> not set, assumed clear
-sf_cloud_state_00 = true
-sf_cloud_state_01 = false
-sf_cloud_state_10 = false
-sf_cloud_state_11 = false
+rbq_cloud_state_00 = true
+rbq_cloud_state_01 = false
+rbq_cloud_state_10 = false
+rbq_cloud_state_11 = false
 
 ### Data Quality
 # 0000 -> highest quality
