Adjust the basic QA filters for MXD09Q1 (collection 5)

--- a/quality_control/qc_default_modis_settings.ini
+++ b/quality_control/qc_default_modis_settings.ini
@@ -204,7 +204,7 @@ rbq_modland_qa_11 = false
 # 10 -> mixed
 # 11 -> not set, assumed clear
 rbq_cloud_state_00 = true
-rbq_cloud_state_01 = false
+rbq_cloud_state_01 = true
 rbq_cloud_state_10 = false
 rbq_cloud_state_11 = false
 
@@ -246,4 +246,4 @@ rbq_adjcorr_1 = true
 # 0 -> same orbit as 500m
 # 1 -> different orbit from 500m
 rbq_difforbit_0 = true
-rbq_difforbit_1 = true
+rbq_difforbit_1 = false
