Update the quality control settings for Collection 6 in MXD09A1

--- a/quality_control/qc_default_modis_settings.ini
+++ b/quality_control/qc_default_modis_settings.ini
@@ -168,11 +168,11 @@ sf_mod35_snow_ice_1 = true
 sf_pixel_adjacent_to_cloud_0 = true
 sf_pixel_adjacent_to_cloud_1 = true
 
-### BRDF correction performed
+### Salt pan
 # 0 -> No
 # 1 -> Yes
-sf_brdf_correction_performed_0 = true
-sf_brdf_correction_performed_1 = false
+sf_salt_pan_0 = true
+sf_salt_pan_1 = false
 
 ### Internal Snow Mask
 # 0 -> No snow
