--- a/qc4sd/quality_control/qc_default_modis_settings.ini
+++ b/qc4sd/quality_control/qc_default_modis_settings.ini
@@ -64,7 +64,7 @@ rbq_atcorr_1 = true
 # 0 -> Not Corrected product
 # 1 ->   Corrected product
 rbq_adjcorr_0 = true
-rbq_adjcorr_1 = true
+rbq_adjcorr_1 = false
 
 #### Solar Zenith Angle Band ####
 
@@ -127,7 +127,7 @@ sf_land_water_111 = false
 # 10 -> Average
 # 11 -> High
 sf_aerosol_quantity_00 = true
-sf_aerosol_quantity_01 = true
+sf_aerosol_quantity_01 = false
 sf_aerosol_quantity_10 = false
 sf_aerosol_quantity_11 = false
 
@@ -146,7 +146,7 @@ sf_cirrus_detected_11 = false
 # 1 -> Cloud
 # NOTE: Maybe this is a water/ocean mask or related with that
 sf_internal_cloud_algorithm_0 = true
-sf_internal_cloud_algorithm_1 = true
+sf_internal_cloud_algorithm_1 = false
 
 ### Internal Fire Algorithm Flag
 # 0 -> No fire
@@ -166,7 +166,7 @@ sf_mod35_snow_ice_1 = true
 # 0 -> No
 # 1 -> Yes
 sf_pixel_adjacent_to_cloud_0 = true
-sf_pixel_adjacent_to_cloud_1 = true
+sf_pixel_adjacent_to_cloud_1 = false
 
 ### Salt pan
 # 0 -> No
@@ -229,7 +229,7 @@ sf_land_water_111 = false
 # 10 -> Average
 # 11 -> High
 sf_aerosol_quantity_00 = true
-sf_aerosol_quantity_01 = true
+sf_aerosol_quantity_01 = false
 sf_aerosol_quantity_10 = false
 sf_aerosol_quantity_11 = false
 
@@ -248,7 +248,7 @@ sf_cirrus_detected_11 = false
 # 1 -> Cloud
 # NOTE: Maybe this is a water/ocean mask or related with that
 sf_internal_cloud_algorithm_0 = true
-sf_internal_cloud_algorithm_1 = true
+sf_internal_cloud_algorithm_1 = false
 
 ### Internal Fire Algorithm Flag
 # 0 -> No fire
@@ -268,7 +268,7 @@ sf_mod35_snow_ice_1 = true
 # 0 -> No
 # 1 -> Yes
 sf_pixel_adjacent_to_cloud_0 = true
-sf_pixel_adjacent_to_cloud_1 = true
+sf_pixel_adjacent_to_cloud_1 = false
 
 ### Salt pan
 # 0 -> No
@@ -328,7 +328,7 @@ rbq_atcorr_1 = true
 # 0 -> Not Corrected product
 # 1 -> Corrected product
 rbq_adjcorr_0 = true
-rbq_adjcorr_1 = true
+rbq_adjcorr_1 = false
 
 ### Different orbit from 500m product
 # 0 -> same orbit as 500m
