--- a/qc4sd/quality_control/qc_default_modis_settings.ini
+++ b/qc4sd/quality_control/qc_default_modis_settings.ini
@@ -17,8 +17,12 @@
 
 [MXD09A1] ########################################################
 # for MOD09A1 and MYD09A1 (Collection 6)
+# Surface Reflectance 8-Day L3
+#
+# https://lpdaac.usgs.gov/dataset_discovery/modis/modis_products_table/mod09a1
+# http://modis-sr.ltdri.org/guide/MOD09_UserGuide_v1.4.pdf
 
-#### Reflectance Band Quality (rbq) ####
+###### Reflectance Band Quality (rbq) ######
 
 ### Modland QA (all bands)
 # 00 -> Corrected product produced at ideal quality -- all bands (WARNING: This field is very exacting)
@@ -66,25 +70,25 @@ rbq_atcorr_1 = true
 rbq_adjcorr_0 = true
 rbq_adjcorr_1 = false
 
-#### Solar Zenith Angle Band ####
+###### Solar Zenith Angle Band ######
 
 # Angle between 0-180
 sza_min = 0
 sza_max = 180
 
-#### View Zenith Angle Band ####
+###### View/Sensor Zenith Angle Band ######
 
 # Angle between 0-180
 vza_min = 0
 vza_max = 50
 
-#### Relative Zenith Angle Band ####
+###### Relative Zenith Angle Band ######
 
 # Angle between -180-180
 rza_min = -180
 rza_max = 180
 
-#### Reflectance State QA flags Band (sf) ####
+###### Reflectance State QA flags Band (sf) ######
 
 ### Cloud State
 # 00 -> clear
@@ -185,8 +189,12 @@ sf_internal_snow_mask_1 = false
 
 [MXD09Q1] ########################################################
 # for MOD09Q1 and MYD09Q1 (Collection 6)
+# Surface Reflectance 8-Day L3
+#
+# https://lpdaac.usgs.gov/dataset_discovery/modis/modis_products_table/mod09q1
+# http://modis-sr.ltdri.org/guide/MOD09_UserGuide_v1.4.pdf
 
-#### Reflectance State QA flags Band (sf) ####
+###### Reflectance State QA flags Band (sf) ######
 
 ### Cloud State
 # 00 -> clear
@@ -284,7 +292,7 @@ sf_salt_pan_1 = false
 sf_internal_snow_mask_0 = true
 sf_internal_snow_mask_1 = false
 
-#### Reflectance Band Quality (rbq) ####
+###### Reflectance Band Quality (rbq) ######
 
 ### Modland QA (all bands)
 # 00 -> Corrected product produced at ideal quality -- all bands (WARNING: This field is very exacting)
@@ -335,3 +343,170 @@ rbq_adjcorr_1 = false
 # 1 -> different orbit from 500m
 rbq_difforbit_0 = true
 rbq_difforbit_1 = false
+
+
+[MXD09GA] ########################################################
+# for MOD09GA and MYD09GA (Collection 6)
+# Surface Reflectance Daily L2G
+#
+# https://lpdaac.usgs.gov/node/806
+# http://modis-sr.ltdri.org/guide/MOD09_UserGuide_v1.4.pdf
+
+###### Reflectance Band Quality (rbq) ######
+
+### Modland QA (all bands)
+# 00 -> Corrected product produced at ideal quality -- all bands (WARNING: This field is very exacting)
+# 01 -> Corrected product produced at less than ideal quality -- some or all bands
+# 10 -> Corrected product NOT produced due to cloud effect -- all bands
+# 11 -> Corrected product NOT produced due to other reasons -- some or all bands maybe be fill value (Note that a value of [11] overrides a value of [01])
+rbq_modland_qa_00 = true
+rbq_modland_qa_01 = true
+rbq_modland_qa_10 = false
+rbq_modland_qa_11 = false
+
+### Data Quality
+# 0000 -> highest quality
+# 0111 -> noisy detector
+# 1000 -> dead detector; data interpolated in L1B
+# 1001 -> solar zenith >= 86 degrees
+# 1010 -> solar zenith >= 85 and < 86 degrees
+# 1011 -> missing input
+# 1100 -> internal constant used in place of climatological data for at least one atmospheric constant
+# 1101 -> correction out of bounds, pixel constrained to extreme allowable value
+# 1110 -> L1B data faulty
+# 1111 -> not processed due to deep ocean or cloud
+rbq_data_quality_0000 = true
+rbq_data_quality_0111 = false
+rbq_data_quality_1000 = false
+rbq_data_quality_1001 = true
+rbq_data_quality_1010 = true
+rbq_data_quality_1011 = false
+rbq_data_quality_1100 = false
+rbq_data_quality_1101 = false
+rbq_data_quality_1110 = false
+rbq_data_quality_1111 = false
+
+### Atmospheric correction
+# 0 -> Not Corrected product
+# 1 -> Corrected product
+# WARNING: This field is very exacting
+#          ~98% of pixels marked with flag 0
+rbq_atcorr_0 = true
+rbq_atcorr_1 = true
+
+### Adjacency correction
+# 0 -> Not Corrected product
+# 1 ->   Corrected product
+rbq_adjcorr_0 = true
+rbq_adjcorr_1 = false
+
+###### Reflectance State QA flags Band (sf) ######
+
+### Cloud State
+# 00 -> clear
+# 01 -> cloudy
+# 10 -> mixed
+# 11 -> not set, assumed clear
+# WARNING: Cloud State not populated since V3 collection
+sf_cloud_state_00 = true
+sf_cloud_state_01 = false
+sf_cloud_state_10 = false
+sf_cloud_state_11 = false
+
+### Cloud shadow
+# 0 -> No
+# 1 -> Yes
+sf_cloud_shadow_0 = true
+sf_cloud_shadow_1 = false
+
+### Land/Water flag
+# 000 -> Shallow ocean
+# 001 -> Land
+# 010 -> Ocean coastlines and lake shorelines
+# 011 -> Shallow inland water
+# 100 -> Ephemeral water
+# 101 -> Deep inland water
+# 110 -> Continental/moderate ocean
+# 111 -> Deep ocean
+sf_land_water_000 = true
+sf_land_water_001 = true
+sf_land_water_010 = true
+sf_land_water_011 = true
+sf_land_water_100 = true
+sf_land_water_101 = false
+sf_land_water_110 = false
+sf_land_water_111 = false
+
+### Aerosol Quantity
+# 00 -> Climatology
+# 01 -> Low
+# 10 -> Average
+# 11 -> High
+sf_aerosol_quantity_00 = true
+sf_aerosol_quantity_01 = false
+sf_aerosol_quantity_10 = false
+sf_aerosol_quantity_11 = false
+
+### cirrus_detected
+# 00 -> None
+# 01 -> Small
+# 10 -> Average
+# 11 -> High
+sf_cirrus_detected_00 = true
+sf_cirrus_detected_01 = true
+sf_cirrus_detected_10 = true
+sf_cirrus_detected_11 = false
+
+### Internal Cloud Algorithm Flag
+# 0 -> No cloud
+# 1 -> Cloud
+# NOTE: Maybe this is a water/ocean mask or related with that
+sf_internal_cloud_algorithm_0 = true
+sf_internal_cloud_algorithm_1 = false
+
+### Internal Fire Algorithm Flag
+# 0 -> No fire
+# 1 -> Fire
+sf_internal_fire_algorithm_0 = true
+sf_internal_fire_algorithm_1 = true
+
+### MOD35 snow/ice flag
+# 0 -> No
+# 1 -> Yes
+# WARNING: This field is very exacting
+#          ~90% of pixels marked with flag yes
+sf_mod35_snow_ice_0 = true
+sf_mod35_snow_ice_1 = true
+
+### Pixel adjacent to cloud
+# 0 -> No
+# 1 -> Yes
+sf_pixel_adjacent_to_cloud_0 = true
+sf_pixel_adjacent_to_cloud_1 = false
+
+### Salt pan
+# 0 -> No
+# 1 -> Yes
+sf_salt_pan_0 = true
+sf_salt_pan_1 = false
+
+### Internal Snow Mask
+# 0 -> No snow
+# 1 -> Snow
+# NOTE: Maybe this is a cloud mask or related with that
+#       see more: http://modis-snow-ice.gsfc.nasa.gov/uploads/pap_cloud_obs02.pdf
+sf_internal_snow_mask_0 = true
+sf_internal_snow_mask_1 = false
+
+###### Solar Zenith Angle Band ######
+
+# Angle between 0-180
+sza_min = 0
+sza_max = 180
+
+###### View/Sensor Zenith Angle Band ######
+
+# Angle between 0-180
+vza_min = 0
+vza_max = 50
+
