Implemented the quality control (partial) for MOD09GQ and MYD09GQ (Collection 6) this is a surface reflectance daily L2G product

--- a/qc4sd/quality_control/qc_default_modis_settings.ini
+++ b/qc4sd/quality_control/qc_default_modis_settings.ini
@@ -17,9 +17,9 @@
 
 [MXD09A1] ########################################################
 # for MOD09A1 and MYD09A1 (Collection 6)
-# Surface Reflectance 8-Day L3
+# MODIS Terra/Aqua Surface Reflectance 8-Day L3 500m
 #
-# https://lpdaac.usgs.gov/dataset_discovery/modis/modis_products_table/mod09a1
+# https://lpdaac.usgs.gov/dataset_discovery/modis/modis_products_table/mod09a1_v006
 # http://modis-sr.ltdri.org/guide/MOD09_UserGuide_v1.4.pdf
 
 ###### Reflectance Band Quality (rbq) ######
@@ -189,9 +189,9 @@ sf_internal_snow_mask_1 = false
 
 [MXD09Q1] ########################################################
 # for MOD09Q1 and MYD09Q1 (Collection 6)
-# Surface Reflectance 8-Day L3
+# MODIS Terra/Aqua Surface Reflectance 8-Day L3 250m
 #
-# https://lpdaac.usgs.gov/dataset_discovery/modis/modis_products_table/mod09q1
+# https://lpdaac.usgs.gov/dataset_discovery/modis/modis_products_table/mod09q1_v006
 # http://modis-sr.ltdri.org/guide/MOD09_UserGuide_v1.4.pdf
 
 ###### Reflectance State QA flags Band (sf) ######
@@ -347,7 +347,7 @@ rbq_difforbit_1 = false
 
 [MXD09GA] ########################################################
 # for MOD09GA and MYD09GA (Collection 6)
-# Surface Reflectance Daily L2G
+# MODIS Terra/Aqua Surface Reflectance Daily L2G 500m
 #
 # https://lpdaac.usgs.gov/node/806
 # http://modis-sr.ltdri.org/guide/MOD09_UserGuide_v1.4.pdf
@@ -510,3 +510,56 @@ sza_max = 180
 vza_min = 0
 vza_max = 50
 
+
+[MXD09GQ] ########################################################
+# for MOD09GQ and MYD09GQ (Collection 6)
+# MODIS Terra/Aqua Surface Reflectance Daily L2G 250m
+#
+# https://lpdaac.usgs.gov/dataset_discovery/modis/modis_products_table/mod09gq
+# http://modis-sr.ltdri.org/guide/MOD09_UserGuide_v1.4.pdf
+
+###### Reflectance Band Quality (rbq) ######
+
+### Modland QA (all bands)
+# 00 -> Corrected product produced at ideal quality -- all bands (WARNING: This field is very exacting)
+# 01 -> Corrected product produced at less than ideal quality -- some or all bands
+# 10 -> Corrected product NOT produced due to cloud effect -- all bands
+# 11 -> Corrected product NOT produced due to other reasons -- some or all bands maybe be fill value (Note that a value of [11] overrides a value of [01])
+rbq_modland_qa_00 = true
+rbq_modland_qa_01 = true
+rbq_modland_qa_10 = false
+rbq_modland_qa_11 = false
+
+### Data Quality
+# 0000 -> highest quality
+# 0111 -> noisy detector
+# 1000 -> dead detector; data interpolated in L1B
+# 1001 -> solar zenith >= 86 degrees
+# 1010 -> solar zenith >= 85 and < 86 degrees
+# 1011 -> missing input
+# 1100 -> internal constant used in place of climatological data for at least one atmospheric constant
+# 1101 -> correction out of bounds, pixel constrained to extreme allowable value
+# 1110 -> L1B data faulty
+# 1111 -> not processed due to deep ocean or cloud
+rbq_data_quality_0000 = true
+rbq_data_quality_0111 = false
+rbq_data_quality_1000 = false
+rbq_data_quality_1001 = true
+rbq_data_quality_1010 = true
+rbq_data_quality_1011 = false
+rbq_data_quality_1100 = false
+rbq_data_quality_1101 = false
+rbq_data_quality_1110 = false
+rbq_data_quality_1111 = false
+
+### Atmospheric correction
+# 0 -> Not Corrected product
+# 1 -> Corrected product
+rbq_atcorr_0 = true
+rbq_atcorr_1 = true
+
+### Adjacency correction
+# 0 -> Not Corrected product
+# 1 -> Corrected product
+rbq_adjcorr_0 = true
+rbq_adjcorr_1 = false
