--- a/qc4sd/quality_control/qc_default_modis_settings.ini
+++ b/qc4sd/quality_control/qc_default_modis_settings.ini
@@ -400,7 +400,7 @@ rbq_atcorr_1 = true
 rbq_adjcorr_0 = true
 rbq_adjcorr_1 = false
 
-###### Reflectance State QA flags Band (sf) ######
+###### Reflectance State QA flags Band (sf) at 1km ######
 
 ### Cloud State
 # 00 -> clear
@@ -563,3 +563,101 @@ rbq_atcorr_1 = true
 # 1 -> Corrected product
 rbq_adjcorr_0 = true
 rbq_adjcorr_1 = false
+
+###### Reflectance State QA flags Band (sf) from MXD09GA at 1km ######
+
+### Cloud State
+# 00 -> clear
+# 01 -> cloudy
+# 10 -> mixed
+# 11 -> not set, assumed clear
+# WARNING: Cloud State not populated since V3 collection
+sf_cloud_state_00 = true
+sf_cloud_state_01 = false
+sf_cloud_state_10 = false
+sf_cloud_state_11 = false
+
+### Cloud shadow
+# 0 -> No
+# 1 -> Yes
+sf_cloud_shadow_0 = true
+sf_cloud_shadow_1 = false
+
+### Land/Water flag
+# 000 -> Shallow ocean
+# 001 -> Land
+# 010 -> Ocean coastlines and lake shorelines
+# 011 -> Shallow inland water
+# 100 -> Ephemeral water
+# 101 -> Deep inland water
+# 110 -> Continental/moderate ocean
+# 111 -> Deep ocean
+sf_land_water_000 = true
+sf_land_water_001 = true
+sf_land_water_010 = true
+sf_land_water_011 = true
+sf_land_water_100 = true
+sf_land_water_101 = false
+sf_land_water_110 = false
+sf_land_water_111 = false
+
+### Aerosol Quantity
+# 00 -> Climatology
+# 01 -> Low
+# 10 -> Average
+# 11 -> High
+sf_aerosol_quantity_00 = true
+sf_aerosol_quantity_01 = false
+sf_aerosol_quantity_10 = false
+sf_aerosol_quantity_11 = false
+
+### cirrus_detected
+# 00 -> None
+# 01 -> Small
+# 10 -> Average
+# 11 -> High
+sf_cirrus_detected_00 = true
+sf_cirrus_detected_01 = true
+sf_cirrus_detected_10 = true
+sf_cirrus_detected_11 = false
+
+### Internal Cloud Algorithm Flag
+# 0 -> No cloud
+# 1 -> Cloud
+# NOTE: Maybe this is a water/ocean mask or related with that
+sf_internal_cloud_algorithm_0 = true
+sf_internal_cloud_algorithm_1 = false
+
+### Internal Fire Algorithm Flag
+# 0 -> No fire
+# 1 -> Fire
+sf_internal_fire_algorithm_0 = true
+sf_internal_fire_algorithm_1 = true
+
+### MOD35 snow/ice flag
+# 0 -> No
+# 1 -> Yes
+# WARNING: This field is very exacting
+#          ~90% of pixels marked with flag yes
+sf_mod35_snow_ice_0 = true
+sf_mod35_snow_ice_1 = true
+
+### Pixel adjacent to cloud
+# 0 -> No
+# 1 -> Yes
+sf_pixel_adjacent_to_cloud_0 = true
+sf_pixel_adjacent_to_cloud_1 = false
+
+### Salt pan
+# 0 -> No
+# 1 -> Yes
+sf_salt_pan_0 = true
+sf_salt_pan_1 = false
+
+### Internal Snow Mask
+# 0 -> No snow
+# 1 -> Snow
+# NOTE: Maybe this is a cloud mask or related with that
+#       see more: http://modis-snow-ice.gsfc.nasa.gov/uploads/pap_cloud_obs02.pdf
+sf_internal_snow_mask_0 = true
+sf_internal_snow_mask_1 = false
