For MXD09GQ files implemented the QC for solar and sensor zenith angle from MXD09GA at 1km

--- a/qc4sd/quality_control/qc_default_modis_settings.ini
+++ b/qc4sd/quality_control/qc_default_modis_settings.ini
@@ -498,13 +498,13 @@ sf_salt_pan_1 = false
 sf_internal_snow_mask_0 = true
 sf_internal_snow_mask_1 = false
 
-###### Solar Zenith Angle Band ######
+###### Solar Zenith Angle Band at 1km ######
 
 # Angle between 0-180
 sza_min = 0
 sza_max = 180
 
-###### View/Sensor Zenith Angle Band ######
+###### View/Sensor Zenith Angle Band at 1km ######
 
 # Angle between 0-180
 vza_min = 0
@@ -661,3 +661,15 @@ sf_salt_pan_1 = false
 #       see more: http://modis-snow-ice.gsfc.nasa.gov/uploads/pap_cloud_obs02.pdf
 sf_internal_snow_mask_0 = true
 sf_internal_snow_mask_1 = false
+
+###### Solar Zenith Angle Band from MXD09GA at 1km ######
+
+# Angle between 0-180
+sza_min = 0
+sza_max = 180
+
+###### View/Sensor Zenith Angle Band from MXD09GA at 1km ######
+
+# Angle between 0-180
+vza_min = 0
+vza_max = 50
