After several tests was adjusted the filters for the quality controls for MXD09GA and MXD09GQ

--- a/qc4sd/quality_control/qc_default_modis_settings.ini
+++ b/qc4sd/quality_control/qc_default_modis_settings.ini
@@ -417,7 +417,7 @@ sf_cloud_state_11 = false
 # 0 -> No
 # 1 -> Yes
 sf_cloud_shadow_0 = true
-sf_cloud_shadow_1 = false
+sf_cloud_shadow_1 = true
 
 ### Land/Water flag
 # 000 -> Shallow ocean
@@ -443,8 +443,8 @@ sf_land_water_111 = false
 # 10 -> Average
 # 11 -> High
 sf_aerosol_quantity_00 = true
-sf_aerosol_quantity_01 = false
-sf_aerosol_quantity_10 = false
+sf_aerosol_quantity_01 = true
+sf_aerosol_quantity_10 = true
 sf_aerosol_quantity_11 = false
 
 ### cirrus_detected
@@ -455,7 +455,7 @@ sf_aerosol_quantity_11 = false
 sf_cirrus_detected_00 = true
 sf_cirrus_detected_01 = true
 sf_cirrus_detected_10 = true
-sf_cirrus_detected_11 = false
+sf_cirrus_detected_11 = true
 
 ### Internal Cloud Algorithm Flag
 # 0 -> No cloud
@@ -488,7 +488,7 @@ sf_pixel_adjacent_to_cloud_1 = false
 # 0 -> No
 # 1 -> Yes
 sf_salt_pan_0 = true
-sf_salt_pan_1 = false
+sf_salt_pan_1 = true
 
 ### Internal Snow Mask
 # 0 -> No snow
@@ -508,7 +508,7 @@ sza_max = 180
 
 # Angle between 0-180
 vza_min = 0
-vza_max = 50
+vza_max = 65
 
 
 [MXD09GQ] ########################################################
@@ -581,7 +581,7 @@ sf_cloud_state_11 = false
 # 0 -> No
 # 1 -> Yes
 sf_cloud_shadow_0 = true
-sf_cloud_shadow_1 = false
+sf_cloud_shadow_1 = true
 
 ### Land/Water flag
 # 000 -> Shallow ocean
@@ -607,8 +607,8 @@ sf_land_water_111 = false
 # 10 -> Average
 # 11 -> High
 sf_aerosol_quantity_00 = true
-sf_aerosol_quantity_01 = false
-sf_aerosol_quantity_10 = false
+sf_aerosol_quantity_01 = true
+sf_aerosol_quantity_10 = true
 sf_aerosol_quantity_11 = false
 
 ### cirrus_detected
@@ -619,14 +619,14 @@ sf_aerosol_quantity_11 = false
 sf_cirrus_detected_00 = true
 sf_cirrus_detected_01 = true
 sf_cirrus_detected_10 = true
-sf_cirrus_detected_11 = false
+sf_cirrus_detected_11 = true
 
 ### Internal Cloud Algorithm Flag
 # 0 -> No cloud
 # 1 -> Cloud
 # NOTE: Maybe this is a water/ocean mask or related with that
 sf_internal_cloud_algorithm_0 = true
-sf_internal_cloud_algorithm_1 = false
+sf_internal_cloud_algorithm_1 = true
 
 ### Internal Fire Algorithm Flag
 # 0 -> No fire
@@ -652,7 +652,7 @@ sf_pixel_adjacent_to_cloud_1 = false
 # 0 -> No
 # 1 -> Yes
 sf_salt_pan_0 = true
-sf_salt_pan_1 = false
+sf_salt_pan_1 = true
 
 ### Internal Snow Mask
 # 0 -> No snow
@@ -672,4 +672,4 @@ sza_max = 180
 
 # Angle between 0-180
 vza_min = 0
-vza_max = 50
+vza_max = 65
